<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <group android:checkableBehavior="single">

                <item
                    android:id="@+id/searchUserFragment"
                    android:icon="@drawable/ic_baseline_search_24"
                    android:title="@string/search_users" />
                <item
                    android:id="@+id/collectionFragment"
                    android:icon="@drawable/ic_theaters_24"
                    android:title="@string/collection" />
                <item
                    android:id="@+id/watchlistsFragment"
                    android:icon="@drawable/ic_visibility_24"
                    android:title="@string/watchlists" />
                <item
                    android:id="@+id/logout"
                    android:onClick="logout"
                    android:icon="@drawable/ic_logout_24"
                    android:title="@string/logout" />

        </group>
</menu>