<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color_dark"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:context=".ui.feedscreen.CreatePostFragment">

            <Button
                android:id="@+id/create_post_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:text="@string/make_a_new_post"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_create_post"
                style="@style/TextInputLayoutDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/hint_color"
                app:counterEnabled="true"
                app:counterMaxLength="2000"
                app:counterTextColor="@color/white"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/create_post_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_post_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    android:maxLines="8"
                    android:hint="@string/content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_tag_movies"
                style="@style/TextInputLayoutDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_create_post"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_tag_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="5"
                    android:hint="@string/tag_movies"/>

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/fl_movie_Tag"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/til_tag_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tag_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="300dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </FrameLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>